Ajout du fichier index.html à la racine

--- a/Site web /calculateur.html
+++ b/Site web /calculateur.html
@@ -16,7 +16,7 @@
             <div class="nav-container">
                 <img src="/Images plat /60138a1c-fb9c-4475-b187-d7515abd07ff.webp" alt="Logo" class="logo"> <!-- Remplacez par le chemin de votre logo -->
                 <ul class="nav-menu">
-                    <li><a href="/Site web /accueil.html">Accueil</a></li>
+                    <li><a href="/Site web /index.html">Accueil</a></li>
                     <li><a href="/Site web /calculateur.html">Calculer vos calories</a></li>
                     <li><a href="/Site web /planning-semaine.html">Planning semaine</a></li>
                     <li><a href="#contact">Contact</a></li>
